Closed
Bug 1000660
Opened 11 years ago
Closed 11 years ago
Fix PTexture protocal usage problem
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: sotaro, Assigned: sotaro)
References
Details
Attachments
(3 files, 1 obsolete file)
|
613 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.06 KB,
patch
|
Details | Diff | Splinter Review | |
|
4.82 KB,
patch
|
sotaro
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1000525 +++
By enabling IPC message log, I faced the b2g process crash withing PTextureParent class function.
| Assignee | ||
Updated•11 years ago
|
Summary: "pipe error: Bad file number" happens during running WindowTest app → Fix PTexture protocal usage problem
| Assignee | ||
Comment 1•11 years ago
|
||
The patch is used to enable IPC message log.
| Assignee | ||
Comment 2•11 years ago
|
||
This is a temporary path just to confirm to prevent the b2g process crash.
By applying the patch, b2g start up normally when IPC message log is enabled. Without the patch, b2g process crash when IPC message log is enabled.
| Assignee | ||
Comment 3•11 years ago
|
||
gecko IPC seem not permit to call PTextureParent::Send__delete__(this) during receiving sync IPC. It actually happens in TextureParent::RecvRemoveTextureSync(). within Send__delete__(), PTextureParent is removed from Manager.
| Assignee | ||
Comment 4•11 years ago
|
||
attachment 8411526 [details] [diff] [review] actually seem not make a problem. Before TextureClient::ForceRemove() is called, TextureClient is already removed from related CompositableHost if TEXTURE_DEALLOCATE_CLIENT is set. TEXTURE_DEALLOCATE_CLIENT flag seems to be used only on ImageClient.
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 5•11 years ago
|
||
| Assignee | ||
Comment 6•11 years ago
|
||
| Assignee | ||
Updated•11 years ago
|
Attachment #8416901 -
Flags: feedback?(nical.bugzilla)
| Assignee | ||
Updated•11 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•11 years ago
|
Status: ASSIGNED → NEW
Updated•11 years ago
|
Attachment #8416901 -
Flags: feedback?(nical.bugzilla) → feedback+
| Assignee | ||
Updated•11 years ago
|
Attachment #8416901 -
Flags: review?(nical.bugzilla)
Updated•11 years ago
|
Attachment #8416901 -
Flags: review?(nical.bugzilla) → review+
| Assignee | ||
Comment 7•11 years ago
|
||
Un-bitrot. Carry "r=nical".
Attachment #8416901 -
Attachment is obsolete: true
Attachment #8421435 -
Flags: review+
| Assignee | ||
Comment 8•11 years ago
|
||
Comment 9•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in
before you can comment on or make changes to this bug.
Description
•