Bug 1000660 - Remove TextureParent::RecvRemoveTextureSync() r=nical